syntax = "proto3";

package stocktrading;
option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "StockTradingProto";

service StockTradingService{
  //UNARY - RPC -> get current stock price
  rpc getStockPrice(StockRequest) returns (StockResponse);

  //server streaming
  rpc subscribeStockPrice(StockRequest) returns (stream StockResponse);

  //client streaming
  rpc bulkStockOrder(stream StockOrder) returns (OrderSummary);

  //Bi-Directtional Streaming
  rpc liveTrading(stream StockOrder) returns(stream TradeStatus);
}

message TradeStatus{
  string order_id = 1;
  string status = 2; //Execute, Failed, Pending
  string message = 3;// Success or Failed Message
  string timeStamp = 4;
}
message StockOrder{
  string order_id = 1;
  string stock_symbol = 2;
  int32 quantity = 3;
  double price = 4;
  string order_type = 5;//BUY or SELL

}

message OrderSummary{
  int32 total_orders = 1;
  double total_amount = 2;
  int32 success_count = 3;
}

message StockRequest{
  string stock_symbol = 1;
}

message StockResponse{
  string stock_symbol = 1;
  double price = 2;
  string timestamp = 3;
}

